--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
             security reviews and accelerates due diligence, so you can <br>
             onboard new tools and partners with confidence. <br>
         </div>
-        <a href="#" class="mainBlock__btn btn">
-            Get a Demo
-        </a>
+        <div class="mainBlock__btnCenter">
+            <a href="#" class="mainBlock__btn btn">
+                Get a Demo
+            </a>
+        </div>
     </div>
     <div class="mainBlock__right">
         <img src="assets/img/mainBlockImg.png" alt="photo">
