--- a/index.html
+++ b/index.html
@@ -17,241 +17,268 @@
 </head>
 <body>
 <script src="assets/js/main.js"></script>
-<header class="header animation-300">
-    <div class="container flex">
-        <div class="burger-wrapper">
-            <button class="header-burger" id="burger">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
+<div class="site-wrapper">
+    <header class="header open animation-300">
+        <div class="container flex">
+            <div class="burger-wrapper">
+                <button class="header-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
 
-        <ul class="header__nav__items flex">
-            <li class="header__nav__item">
-                <a href="#" class="header__nav__item__link">Product</a>
-            </li>
+            <ul class="header__nav__items flex">
+                <li class="header__nav__item">
+                    <a href="#" class="header__nav__item__link">Product</a>
+                </li>
 
-            <li class="header__nav__item">
-                <a href="#" class="header__nav__item__link">Pricing</a>
-            </li>
+                <li class="header__nav__item">
+                    <a href="#" class="header__nav__item__link">Pricing</a>
+                </li>
 
-            <li class="header__nav__item">
-                <a href="#" class="header__nav__item__link">Company</a>
-            </li>
+                <li class="header__nav__item">
+                    <a href="#" class="header__nav__item__link">Company</a>
+                </li>
 
-            <li class="header__nav__item">
-                <a href="#" class="header__nav__item__link">Learn More</a>
-            </li>
+                <li class="header__nav__item">
+                    <a href="#" class="header__nav__item__link">Learn More</a>
+                </li>
 
-            <li class="header__nav__item">
-                <a href="#" class="singInLink__adaptive">Sign In</a>
-            </li>
-        </ul>
+                <li class="header__nav__item">
+                    <a href="#" class="singInLink__adaptive">Sign In</a>
+                </li>
+            </ul>
 
-        <div class="header__buttons">
-            <a href="#" class="singInLink">Sign In</a>
-            <a href="#" class="btn">Get Started</a>
-        </div>
-    </div>
-</header>
-
-<div class="mainBlock flex animation-70">
-    <div class="mainBlock__left">
-        <h1 class="mainBlock__title">
-            Security <br>
-            reviews, <br>
-            solved <br>
-        </h1>
-        <div class="mainBlock__subtitle">
-            Using AI and a team of experts, HyperComply automates <br>
-            security reviews and accelerates due diligence, so you can <br>
-            onboard new tools and partners with confidence. <br>
-        </div>
-        <div class="mainBlock__btnCenter">
-            <a href="#" class="mainBlock__btn btn">
-                Get a Demo
-            </a>
-        </div>
-    </div>
-    <div class="mainBlock__right">
-        <img src="assets/img/mainBlockImg.png" alt="photo">
-    </div>
-</div>
-
-<div class="sponsors animation-300">
-    <div class="container flex">
-        <div class="sponsors__textContent">
-            We've saved 10,000+ hours <br>
-            for the smartest businesses <br>
-            in the world. <br>
-        </div>
-        <div class="sponsorsLogo flex">
-            <img src="assets/img/viduard.svg" alt="" class="sponsor">
-            <img src="assets/img/heap.svg" alt="" class="sponsor">
-            <img src="assets/img/alloy.svg" alt="" class="sponsor">
-            <img src="assets/img/fullstory.svg" alt="" class="sponsor">
-            <img src="assets/img/salesloft.svg" alt="" class="sponsor">
-            <img src="assets/img/drata.svg" alt="" class="sponsor">
-        </div>
-    </div>
-</div>
-
-<div class="closeDeals animation-70">
-    <div class="container">
-        <div class="closeDeals__topSubtitle">
-            For Sales teams at startup companies
-        </div>
-        <div class="h1 closeDeals__title">
-            Close deals faster
-        </div>
-        <div class="closeDeals__bottomSubtitle">
-            Don't let security reviews slow you down. We make sure you respond to security questionnaires in 1 day,
-            guaranteed.
-        </div>
-        <div class="btnCenter">
-            <div class="btn closeDeals__btn">
-                Learn More
+            <div class="header__buttons">
+                <a href="#" class="singInLink">Sign In</a>
+                <a href="#" class="btn green-button">Get Started</a>
             </div>
         </div>
+    </header>
 
-        <div class="closeDeals__content flex">
-            <div class="closeDealsLeft">
-                <div class="textElement">Automation + human review</div>
-                <div class="textElement">Always learning</div>
-                <div class="textElement">Simple and flexible</div>
+    <div class="mainBlock flex animation-70">
+        <div class="mainBlock__left">
+            <h1 class="mainBlock__title">
+                Security <br>
+                reviews, <br>
+                solved <br>
+            </h1>
+            <div class="mainBlock__subtitle">
+                Using AI and a team of experts, HyperComply automates <br>
+                security reviews and accelerates due diligence, so you can <br>
+                onboard new tools and partners with confidence. <br>
             </div>
-            <div class="closeDealsRight">
-                <img src="assets/img/percentImg.png" alt="">
+            <div class="mainBlock__btnCenter">
+                <a href="#" class="green-button btn">
+                    Get a Demo
+                </a>
+            </div>
+        </div>
+        <div class="mainBlock__right">
+            <img src="assets/img/mainBlockImg.png" alt="photo">
+        </div>
+    </div>
+
+    <div class="sponsors animation-300">
+        <div class="container flex">
+            <div class="sponsors__textContent">
+                We've saved 10,000+ hours <br>
+                for the smartest businesses <br>
+                in the world. <br>
+            </div>
+            <div class="sponsorsLogo flex">
+                <img src="assets/img/viduard.svg" alt="" class="sponsor">
+                <img src="assets/img/heap.svg" alt="" class="sponsor">
+                <img src="assets/img/alloy.svg" alt="" class="sponsor">
+                <img src="assets/img/fullstory.svg" alt="" class="sponsor">
+                <img src="assets/img/salesloft.svg" alt="" class="sponsor">
+                <img src="assets/img/drata.svg" alt="" class="sponsor">
             </div>
         </div>
     </div>
-</div>
 
-<div class="vendorReviews animation-300">
-    <div class="container">
-        <div class="vendorReviews__topSubtitle">
-            For Procurement teams who care about security
-        </div>
-        <div class="h1 vendorReviews__title">
-            Easy vendor reviews
-        </div>
-        <div class="vendorReviews__bottomSubtitle">
-            HyperComply makes it easy to send security questionnaires to new vendors and monitor your network of tools
-            over time.
-        </div>
-        <div class="btnCenter">
-            <div class="btn vendorReviews__btn">
-                Learn More
+    <div class="closeDeals animation-70">
+        <div class="container">
+            <div class="closeDeals__topSubtitle">
+                For Sales teams at startup companies
             </div>
-        </div>
+            <div class="h1 closeDeals__title">
+                Close deals faster
+            </div>
+            <div class="closeDeals__bottomSubtitle">
+                Don't let security reviews slow you down. We make sure you respond to security questionnaires in 1 day,
+                guaranteed.
+            </div>
+            <div class="btnCenter">
+                <div class="btn closeDeals__btn green-button">
+                    Learn More
+                </div>
+            </div>
 
-        <div class="vendorReviews__content flex">
-            <div class="vendorReviewsLeft">
-                <div class="textElement">Automation + human review</div>
-                <div class="textElement">Always learning</div>
-                <div class="textElement">Simple and flexible</div>
-            </div>
-            <div class="vendorReviewsRight">
-                <img src="assets/img/peoplesMessage.png" alt="" class="vendorReviewsImg">
-                <img src="assets/img/decoration.svg" alt="" class="decoration">
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="teams animation-70">
-    <div class="h1 teams__title">
-        Trusted by top teams
-    </div>
-    <div class="teams__swiper teams__mySwiper">
-        <div class="teams__swiperWrapper">
-            <div class="logo flex">
-                <img src="assets/img/smash%20Logo.svg" alt="logo" class="smashLogo">
-            </div>
-            <div class="teams__textContent">
-                “HyperComply has enabled us to complete <br>
-                questionnaires quickly and accurately, and has <br>
-                had a hugely positive effect on speeding up our <br>
-                sales cycle.” <br>
-            </div>
-            <div class="people flex">
-                <img src="assets/img/peopleIcon.svg" alt="icon" class="icon">
-                <div class="peopleInfo">
-                    Desiree R, Sr. Director of Information Security
+            <div class="closeDeals__content flex">
+                <div class="closeDealsLeft">
+                    <div class="textElement">Automation + human review</div>
+                    <div class="textElement">Always learning</div>
+                    <div class="textElement">Simple and flexible</div>
+                </div>
+                <div class="closeDealsRight flex">
+                    <div class="closeDeals__single-chart">
+                        <svg viewBox="0 0 36 36" class="closeDeals__circular-chart orange">
+                            <path class="closeDeals__circle-bg"
+                                  d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+                            />
+                            <path class="closeDeals__circle"
+                                  stroke-dasharray="91, 100"
+                                  d="M18 2.0845
+          a 15.9155 15.9155 0 0 1 0 31.831
+          a 15.9155 15.9155 0 0 1 0 -31.831"
+                            />
+                            <text x="18" y="20.35" class="closeDeals__percentage">
+                                91%
+                                <div class="closeDealsRight__subtitle">
+                                    of you questionnaire <br>
+                                    has been autofilled
+                                </div>
+                            </text>
+                        </svg>
+                    </div>
+                    <!--
+                                        <img src="assets/img/percentImg.png" alt="">
+                    -->
                 </div>
             </div>
         </div>
-        <div class="teams__swiper-button-next"></div>
-        <div class="teams__swiper-button-prev"></div>
-        <div class="teams__swiper-pagination"></div>
     </div>
-</div>
 
-<div class="securityReviews animation-300">
-    <div class="container">
-        <div class="h1 securityReviews__title">
-            Everything you need to get <br>
-            security reviews done fast <br>
-            and done right <br>
-        </div>
-        <div class="btnCenter">
-            <a href="#" class="btn securityReviews__btn">Get a Demo</a>
-        </div>
-        <img src="assets/img/decorationSecurityReviews.svg" alt="" class="decoration">
-    </div>
-</div>
-
-<footer class="footer animation-70">
-    <div class="container flex">
-        <div class="logo">
-            <img src="assets/img/logo.svg" alt="logo">
-        </div>
-
-        <div class="navs flex">
-            <div class="navs__column">
-                <div class="nav__title">
-                    Legal
-                </div>
-                <a href="#" class="nav">
-                    Privacy Policy
+    <div class="vendorReviews animation-300">
+        <div class="container">
+            <div class="vendorReviews__topSubtitle">
+                For Procurement teams who care about security
+            </div>
+            <div class="h1 vendorReviews__title">
+                Easy vendor reviews
+            </div>
+            <div class="vendorReviews__bottomSubtitle">
+                HyperComply makes it easy to send security questionnaires to new vendors and monitor your network of
+                tools
+                over time.
+            </div>
+            <div class="btnCenter">
+                <a href="#" class="btn vendorReviews__btn green-button">
+                    Learn More
                 </a>
             </div>
 
-            <div class="navs__column">
-                <div class="nav__title">
-                    Contact
+            <div class="vendorReviews__content flex">
+                <div class="vendorReviewsLeft">
+                    <div class="textElement">Automation + human review</div>
+                    <div class="textElement">Always learning</div>
+                    <div class="textElement">Simple and flexible</div>
                 </div>
-                <a href="#" class="nav">
-                    Email us
-                </a>
+                <div class="vendorReviewsRight">
+                    <img src="assets/img/peoplesMessage.png" alt="" class="vendorReviewsImg">
+                    <img src="assets/img/decoration.svg" alt="" class="decoration">
+                </div>
+            </div>
+        </div>
+    </div>
 
-                <a href="#" class="nav">
-                    Email us
-                </a>
+    <div class="teams animation-70">
+        <div class="h1 teams__title">
+            Trusted by top teams
+        </div>
+        <div class="teams__swiper teams__mySwiper">
+            <div class="teams__swiperWrapper">
+                <div class="logo flex">
+                    <img src="assets/img/smash%20Logo.svg" alt="logo" class="smashLogo">
+                </div>
+                <div class="teams__textContent">
+                    “HyperComply has enabled us to complete <br>
+                    questionnaires quickly and accurately, and has <br>
+                    had a hugely positive effect on speeding up our <br>
+                    sales cycle.” <br>
+                </div>
+                <div class="people flex">
+                    <img src="assets/img/peopleIcon.svg" alt="icon" class="icon">
+                    <div class="peopleInfo">
+                        Desiree R, Sr. Director of Information Security
+                    </div>
+                </div>
+            </div>
+            <div class="teams__swiper-button-next"></div>
+            <div class="teams__swiper-button-prev"></div>
+            <div class="teams__swiper-pagination"></div>
+        </div>
+    </div>
+
+    <div class="securityReviews animation-300">
+        <div class="container">
+            <div class="h1 securityReviews__title">
+                Everything you need to get <br>
+                security reviews done fast <br>
+                and done right <br>
+            </div>
+            <div class="btnCenter">
+                <a href="#" class="btn green-button">Get a Demo</a>
+            </div>
+            <img src="assets/img/decorationSecurityReviews.svg" alt="" class="decoration">
+        </div>
+    </div>
+
+    <footer class="footer animation-70">
+        <div class="container flex">
+            <div class="logo">
+                <img src="assets/img/logo.svg" alt="logo">
             </div>
 
-            <div class="navs__column">
-                <div class="nav__title">
-                    About
-                </div>
-                <a href="#" class="nav">
-                    Company
-                </a>
-
-                <div class="socials">
-                    <a href="#" class="social">
-                        <img src="assets/img/twitter.svg" alt="">
-                    </a>
-
-                    <a href="#" class="social">
-                        <img src="assets/img/in-icon.svg" alt="">
+            <div class="navs flex">
+                <div class="navs__column">
+                    <div class="nav__title">
+                        Legal
+                    </div>
+                    <a href="#" class="nav">
+                        Privacy Policy
                     </a>
                 </div>
+
+                <div class="navs__column">
+                    <div class="nav__title">
+                        Contact
+                    </div>
+                    <a href="#" class="nav">
+                        Email us
+                    </a>
+
+                    <a href="#" class="nav">
+                        Email us
+                    </a>
+                </div>
+
+                <div class="navs__column">
+                    <div class="nav__title">
+                        About
+                    </div>
+                    <a href="#" class="nav">
+                        Company
+                    </a>
+
+                    <div class="socials">
+                        <a href="#" class="social">
+                            <img src="assets/img/twitter.svg" alt="">
+                        </a>
+
+                        <a href="#" class="social">
+                            <img src="assets/img/in-icon.svg" alt="">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+</div>
 </body>
 </html>
