adaptive site end

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                         Company
                     </a>
 
-                    <div class="socials">
+                    <!--<div class="socials">
                         <a href="#" class="social">
                             <img src="assets/img/twitter.svg" alt="">
                         </a>
@@ -273,7 +273,7 @@
                         <a href="#" class="social">
                             <img src="assets/img/in-icon.svg" alt="">
                         </a>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
