--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </li>
             </ul>
 
-            <div class="header__buttons">
+            <div class="header__buttons flex">
                 <a href="#" class="singInLink">Sign In</a>
                 <a href="#" class="btn green-button">Get Started</a>
             </div>
