--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                         <form action="index.html#closeDeals__percentage" class="closeDeals__percentage__form">
                             <label for="closeDeals__percentage__input"></label>
-                            <input type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input"
+                            <input autofocus type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input"
                                    onkeydown="this.value = this.value.replace(/[^\d]/g,'');">
                         </form>
                     </div>
