--- a/index.html
+++ b/index.html
@@ -58,72 +58,73 @@
         </div>
     </header>
 
-    <div class="mainBlock flex animation-70">
-        <div class="mainBlock__left">
-            <h1 class="mainBlock__title">
-                Security <br>
-                reviews, <br>
-                solved <br>
-            </h1>
-            <div class="mainBlock__subtitle">
-                Using AI and a team of experts, HyperComply automates <br>
-                security reviews and accelerates due diligence, so you can <br>
-                onboard new tools and partners with confidence. <br>
+    <div class="mainBlock animation-70">
+        <div class="mainBlock__content flex">
+            <div class="mainBlock__left">
+                <h1 class="mainBlock__title anim-items">
+                    Security <br>
+                    reviews, <br>
+                    solved <br>
+                </h1>
+                <div class="mainBlock__subtitle anim-items">
+                    Using AI and a team of experts, HyperComply automates <br>
+                    security reviews and accelerates due diligence, so you can <br>
+                    onboard new tools and partners with confidence. <br>
+                </div>
+                <div class="mainBlock__btnCenter anim-items">
+                    <a href="#" class="green-button btn">
+                        Get a Demo
+                    </a>
+                </div>
             </div>
-            <div class="mainBlock__btnCenter">
-                <a href="#" class="green-button btn">
-                    Get a Demo
-                </a>
+            <div class="mainBlock__right">
+                <img src="assets/img/mainBlockImg.png" alt="photo" class="anim-items">
             </div>
         </div>
-        <div class="mainBlock__right">
-            <img src="assets/img/mainBlockImg.png" alt="photo">
-        </div>
-    </div>
-
-    <div class="sponsors animation-300">
-        <div class="container flex ">
-            <div class="sponsors__textContent">
-                We've saved 10,000+ hours <br>
-                for the smartest businesses <br>
-                in the world. <br>
-            </div>
-            <div class="sponsorsLogo flex">
-                <img src="assets/img/viduard.svg" alt="" class="sponsor ">
-                <img src="assets/img/heap.svg" alt="" class="sponsor ">
-                <img src="assets/img/alloy.svg" alt="" class="sponsor ">
-                <img src="assets/img/fullstory.svg" alt="" class="sponsor">
-                <img src="assets/img/salesloft.svg" alt="" class="sponsor">
-                <img src="assets/img/drata.svg" alt="" class="sponsor">
+        <div class="sponsors animation-300">
+            <div class="container flex anim-items">
+                <div class="sponsors__textContent">
+                    We've saved 10,000+ hours <br>
+                    for the smartest businesses <br>
+                    in the world. <br>
+                </div>
+                <div class="sponsorsLogo flex">
+                    <img src="assets/img/viduard.svg" alt="" class="sponsor ">
+                    <img src="assets/img/heap.svg" alt="" class="sponsor ">
+                    <img src="assets/img/alloy.svg" alt="" class="sponsor ">
+                    <img src="assets/img/fullstory.svg" alt="" class="sponsor">
+                    <img src="assets/img/salesloft.svg" alt="" class="sponsor">
+                    <img src="assets/img/drata.svg" alt="" class="sponsor">
+                </div>
             </div>
         </div>
     </div>
 
     <div class="closeDeals animation-70">
         <div class="container">
-            <div class="closeDeals__topSubtitle">
+            <div class="closeDeals__topSubtitle anim-items">
                 For Sales teams at startup companies
             </div>
-            <div class="h1 closeDeals__title">
+            <div class="h1 closeDeals__title anim-items">
                 Close deals faster
             </div>
-            <div class="closeDeals__bottomSubtitle">
+            <div class="closeDeals__bottomSubtitle anim-items">
                 Don't let security reviews slow you down. We make sure you respond to security questionnaires in 1 day,
                 guaranteed.
             </div>
-            <div class="btnCenter">
+            <div class="btnCenter anim-items">
                 <div class="btn closeDeals__btn green-button">
                     Learn More
                 </div>
             </div>
 
             <div class="closeDeals__content flex">
-                <div class="closeDealsLeft">
+                <div class="closeDealsLeft anim-items">
                     <div class="textElement">Automation + human review</div>
                     <div class="textElement">Always learning</div>
                     <div class="textElement">Simple and flexible</div>
                 </div>
-                <div class="closeDealsRight flex">
+                <div class="closeDealsRight anim-items flex">
                     <div class="closeDeals__single-chart">
                         <svg viewBox="0 0 36 36" class="closeDeals__circular-chart orange">
                             <path class="closeDeals__circle-bg"
@@ -148,7 +149,7 @@
                         </div>
                         <form action="index.html#closeDeals__percentage" class="closeDeals__percentage__form">
                             <label for="closeDeals__percentage__input"></label>
-                            <input autofocus type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input"
+                            <input type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input"
                                    onkeydown="this.value = this.value.replace(/[^\d]/g,'');">
                         </form>
                     </div>
@@ -159,30 +160,30 @@
 
     <div class="vendorReviews animation-300">
         <div class="container">
-            <div class="vendorReviews__topSubtitle">
+            <div class="vendorReviews__topSubtitle anim-items">
                 For Procurement teams who care about security
             </div>
-            <div class="h1 vendorReviews__title">
+            <div class="h1 vendorReviews__title anim-items">
                 Easy vendor reviews
             </div>
-            <div class="vendorReviews__bottomSubtitle">
+            <div class="vendorReviews__bottomSubtitle anim-items">
                 HyperComply makes it easy to send security questionnaires to new vendors and monitor your network of
                 tools
                 over time.
             </div>
-            <div class="btnCenter">
+            <div class="btnCenter anim-items">
                 <a href="#" class="btn vendorReviews__btn green-button">
                     Learn More
                 </a>
             </div>
 
             <div class="vendorReviews__content flex">
-                <div class="vendorReviewsLeft">
+                <div class="vendorReviewsLeft anim-items">
                     <div class="textElement">Automation + human review</div>
                     <div class="textElement">Always learning</div>
                     <div class="textElement">Simple and flexible</div>
                 </div>
-                <div class="vendorReviewsRight">
+                <div class="vendorReviewsRight anim-items">
                     <img src="assets/img/peoplesMessage.png" alt="" class="vendorReviewsImg">
                     <img src="assets/img/decoration.svg" alt="" class="decoration">
                 </div>
@@ -191,11 +192,11 @@
     </div>
 
     <div class="teams animation-70">
-        <div class="h1 teams__title">
+        <div class="h1 teams__title anim-items">
             Trusted by top teams
         </div>
         <div class="teams__swiper teams__mySwiper">
-            <div class="teams__swiperWrapper">
+            <div class="teams__swiperWrapper anim-items">
                 <div class="logo flex">
                     <img src="assets/img/smash%20Logo.svg" alt="logo" class="smashLogo">
                 </div>
@@ -220,12 +221,12 @@
 
     <div class="securityReviews animation-300">
         <div class="container">
-            <div class="h1 securityReviews__title">
+            <div class="h1 securityReviews__title anim-items">
                 Everything you need to get <br>
                 security reviews done fast <br>
                 and done right <br>
             </div>
-            <div class="btnCenter">
+            <div class="btnCenter anim-items">
                 <a href="#" class="btn green-button">Get a Demo</a>
             </div>
             <img src="assets/img/decorationSecurityReviews.svg" alt="" class="decoration">
@@ -234,12 +235,12 @@
 
     <footer class="footer animation-70">
         <div class="container flex">
-            <div class="logo">
+            <div class="logo anim-items">
                 <img src="assets/img/logo.svg" alt="logo">
             </div>
 
             <div class="navs flex">
-                <div class="navs__column">
+                <div class="navs__column anim-items">
                     <div class="nav__title">
                         Legal
                     </div>
@@ -248,7 +249,7 @@
                     </a>
                 </div>
 
-                <div class="navs__column">
+                <div class="navs__column anim-items">
                     <div class="nav__title">
                         Contact
                     </div>
@@ -261,7 +262,7 @@
                     </a>
                 </div>
 
-                <div class="navs__column">
+                <div class="navs__column anim-items">
                     <div class="nav__title">
                         About
                     </div>
