close deals form

--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
                         </div>
                         <form action="index.html#closeDeals__percentage" class="closeDeals__percentage__form">
                             <label for="closeDeals__percentage__input"></label>
-                            <input type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input"
-                                   onkeydown="this.value = this.value.replace(/[^\d]/g,'');">
+                            <input type="text" id="closeDeals__percentage__input" class="closeDeals__percentage__input" required>
                         </form>
                     </div>
                 </div>
